# localman

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_output.txt  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsc_output.txt
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  build_errors.txt  build_errors_utf8.txt  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  http.rs  lib.rs  main.rs  network.rs  sync.rs  ws_client.rs
src/components/: AuthEditor.tsx  CodeSnippetModal.tsx  CollectionRunnerModal.tsx  CollectionsSidebar.tsx  CookieManagerModal.tsx  Dialog.tsx  DocumentationEditor.tsx  EnvironmentManager.tsx  EnvironmentSelector.tsx  FormDataEditor.tsx  GlobalSearch.tsx  GlobalVariablesModal.tsx  GraphQLBody.tsx  HistoryPanel.tsx  ImportModal.tsx  KeyValueEditor.tsx  PresenceIndicator.tsx  RequestTabs.tsx  RequestWorkspace.tsx  ResponsePanel.tsx  RightInspector.tsx  ScriptEditor.tsx  ScriptSnippets.tsx  SettingsModal.tsx  ShortcutsModal.tsx  ToastViewport.tsx  TopBar.tsx  VariableAutocomplete.tsx  VariableInput.tsx  WebSocketWorkspace.tsx
src/utils/: sandbox.ts
