[package]
name = "localman"
default-run = "localman"
version = "0.1.7"
description = "A Tauri App"
authors = ["Subhajit"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "localman"
path = "src/main.rs"

[[bin]]
name = "cli_runner"
path = "src/bin/cli_runner.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "query"] }
mdns-sd = "0.18.2"
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
axum = { version = "0.8.8", features = ["ws"] }
get_if_addrs = "0.5.3"
local-ip-address = "0.6.10"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
http = "1"
clap = { version = "4.5.30", features = ["derive"] }
hostname = "0.4.0"
